Update LocaleTest01.java